# 2FA

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
extensions/flet_qr_scanner/: README.md  mkdocs.yml  pyproject.toml
extensions/flet_qr_scanner/docs/: FletQrScanner.md  index.md
extensions/flet_qr_scanner/examples/flet_qr_scanner_example/: pyproject.toml
extensions/flet_qr_scanner/examples/flet_qr_scanner_example/src/: main.py
extensions/flet_qr_scanner/src/flet_qr_scanner/: __init__.py  flet_qr_scanner.py
extensions/flet_qr_scanner/src/flutter/flet_qr_scanner/: pubspec.yaml
extensions/flet_qr_scanner/src/flutter/flet_qr_scanner/lib/: flet_qr_scanner.dart
extensions/flet_qr_scanner/src/flutter/flet_qr_scanner/lib/src/: extension.dart  flet_qr_scanner.dart
src/: config.py  main.py
src/core/: crypto.py  otp.py  qr.py  uri_parser.py  vault.py
src/github/: api.py  oauth.py
src/storage/: database.py  models.py
src/ui/: app.py  flet_compat.py  theme.py
src/ui/components/: countdown.py  github_card.py  otp_card.py
src/ui/pages/: add_account.py  backup.py  github.py  home.py  lock.py  settings.py
src/utils/: clipboard.py  export_import.py  time_sync.py
tests/: test_add_account_scan.py  test_app_smoke.py  test_config.py  test_crypto.py  test_export_import.py  test_flet_compat.py  test_github_api.py  test_github_oauth.py  test_lock_page.py  test_main_entry.py  test_otp.py  test_qr.py  test_uri_parser.py  test_vault_github.py
