[project]
name = "flet-qr-scanner"
version = "0.1.0"
description = "FletQrScanner control for Flet"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet contributors", email = "you@example.com" }
]
dependencies = [
    "flet>=0.85.3",
]

[dependency-groups]
dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]"
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/flet-qr-scanner"
Repository = "https://github.com/MyGithubAccount/flet-qr-scanner"
Issues = "https://github.com/MyGithubAccount/flet-qr-scanner/issues"

[tool.setuptools.package-data]
"flutter.flet_qr_scanner" = ["**/*"]

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
